--- a/src/main/templates/login.html
+++ b/src/main/templates/login.html
@@ -1,3 +1,22 @@
+<div class="jumbotron">
+  <h1><img src="/src/app/img/logo.png"></h1>
+  <p>belphin! It's like a dolphin but with be!</p>
+  <!--<p>belphin! Это как дельфин, только на b!</p>-->
+</div>
 <h1>Login</h1>
-<a ui-sref="signup">signup</a>
-
+<div class="col-md-8">
+    <form>
+      <div class="form-group">
+        <label for="inputUsername">Username</label>
+        <input type="text" class="form-control" id="inputUsername" placeholder="Username">
+      </div>
+      <div class="form-group">
+        <label for="inputPassword1">Password</label>
+        <input type="password" class="form-control" id="inputPassword1" placeholder="Password">
+      </div>
+      <div class="text-right">
+          <button type="submit" class="btn btn-default">Submit</button>
+          <a ui-sref="signup" class="btn btn-link">Create account</a>
+      </div>
+    </form>
+</div>
