--- a/src/main/templates/login.html
+++ b/src/main/templates/login.html
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-  <h1><img src="/src/app/img/logo.png"></h1>
+  <h1><img src="/src/app/img/logo.png" style="width:320px;"></h1>
   <p>belphin! It's like a dolphin but with be!</p>
   <!--<p>belphin! Это как дельфин, только на b!</p>-->
 </div>
