--- a/src/main/templates/login.html
+++ b/src/main/templates/login.html
@@ -8,11 +8,11 @@
     <form>
       <div class="form-group">
         <label for="inputUsername">Username</label>
-        <input type="text" class="form-control" id="inputUsername" placeholder="Username">
+        <input type="text" class="form-control" id="inputUsername" placeholder="Username" ng-model="username">
       </div>
       <div class="form-group">
         <label for="inputPassword1">Password</label>
-        <input type="password" class="form-control" id="inputPassword1" placeholder="Password">
+        <input type="password" class="form-control" id="inputPassword1" placeholder="Password" ng-model="password">
       </div>
       <div class="text-right">
           <button type="submit" class="btn btn-default">Submit</button>
