--- a/src/main/templates/signup.html
+++ b/src/main/templates/signup.html
@@ -1,9 +1,8 @@
-<div ng-controller="signupCtrl">
-<h1>Signup</h1>
-<div class="alert alert-danger" role="alert" ng-show="error">
-    {{ error }}
-</div>
-<div class="col-md-8">
+<div class="col-md-8" ng-controller="signupCtrl">
+    <h1>Signup</h1>
+    <div class="alert alert-danger" role="alert" ng-show="error">
+        {{ error }}
+    </div>
     <form>
       <div class="form-group">
         <label for="inputUsername">Username</label>
@@ -22,5 +21,4 @@
           <a ui-sref="login" class="btn btn-link">Log in</a>
       </div>
     </form>
-</div>
 </div>
