--- a/src/main/templates/main.html
+++ b/src/main/templates/main.html
@@ -40,6 +40,7 @@
                         <th>Price</th>
                         <th>Type</th>
                         <th>Status</th>
+                        <th>&nbsp</th>
                     </tr>
                     <tr ng-repeat="ticket in tickets">
                         <td>{{ stock_code(ticket.stock_id) }}</td>
@@ -50,6 +51,11 @@
                             <span class="label label-warning" ng-show="ticket.buy">Buy</span>
                         </td>
                         <td>{{ ticket.duration }}</td>
+                        <td>
+                            <button type="button" class="close" ng-click="close_stock()">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </td>
                     </tr>
                 </table>
             </div>
@@ -65,6 +71,7 @@
             </button>
         </div>
         <div class="panel-body">
+            <div id="chart_div"></div>
         {{ selectedStock }}
         </div>
     </div></div>
@@ -75,14 +82,18 @@
                 <form>
                     <div class="form-group">
                         <label for="priceInput">Price</label>
-                        <input type="number" class="form-control" id="priceInput" placeholder="Price">
+                        <input type="number" class="form-control" id="priceInput" placeholder="Price" ng-model="stock_price">
                     </div>
                     <div class="form-group">
                         <label for="amountInput ">Amount</label>
-                        <input type="number" class="form-control" id="amountInput" placeholder="Amount">
+                        <input type="number" class="form-control" id="amountInput" placeholder="Amount" ng-model="stock_amount">
                     </div>
-                    <button type="button" class="btn btn-success col-md-6">Buy</button>
-                    <button type="button" class="btn btn-warning col-md-6">Sell</button>
+                    <button type="button" class="btn btn-success col-md-6" ng-click="open_stock(true)">
+                        Buy
+                    </button>
+                    <button type="button" class="btn btn-warning col-md-6" ng-click="open_stock(false)">
+                        Sell
+                    </button>
                 </form>
             </div>
         </div>
